# MLProf

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  profiler-mlir-test.mlir
examples/LeNet/: fake-lenet.mlir  lenet-test.mlir  log  makefile
examples/matmul-test/: a.out  log.ll  makefile  matmul-callfunc-test.mlir  matmul-with-time.mlir
examples/mlir-timing-test/: CMakeLists.txt  generated.mlir  mlir-timing-test.cpp
include/: CMakeLists.txt
include/Dialect/: CMakeLists.txt
include/Dialect/profiling/: CMakeLists.txt  profilingDialect.h  profilingDialect.td  profilingOps.h  profilingOps.td  profilingTypes.h  profilingTypes.td
include/Utils/: compileUtils.h  logger.h
include/ml_profiler/: Profiler.h  TimeEvent.h  TimeManager.h
include/ml_profiler/Runtime/: Profiler.h  ProfilingTime.h
include/mlir_profiler/: Profiler.h  TimeEvent.h  TimeManager.h
src/: CMakeLists.txt  Profiler.cpp  TimeEvent.cpp  TimeManager.cpp
src/Conversion/: CMakeLists.txt  profilingPass.cpp
src/Dialect/: CMakeLists.txt
src/Dialect/profiling/: CMakeLists.txt  profilingDialect.cpp  profilingOps.cpp  profilingTypes.cpp
src/Runtime/: Profiler.cpp
src/Utils/: CMakeLists.txt  compileUtils.cpp  logger.cpp
src/mlir_profiler/: CMakeLists.txt  Profiler.cpp  TimeEvent.cpp  TimeManager.cpp
test/: CMakeLists.txt  test-TimeManager-and-TimeEvent.cpp
